log
mi., 15 de feb. de 2023 12:35:23: 
 tests:  0|6
total_score: 0/70
7964391
Thu 30 Mar 2023 03:29:53 PM UTC: 
 tests:  0|6
total_score: 0/70
31611cc
Thu 30 Mar 2023 03:32:39 PM UTC: 
 arraylist.c | 7 ++++++-
 1 file changed, 6 insertions(+), 1 deletion(-)
In file included from test.c:5:
arraylist.c: In function ‘createList’:
arraylist.c:18:3: error: ‘lista’ undeclared (first use in this function); did you mean ‘list’?
   18 |   lista->data=(void**)calloc(lista->capacity,sizeof(void));
      |   ^~~~~
      |   list
arraylist.c:18:3: note: each undeclared identifier is reported only once for each function it appears in
Compilation failed
b288765
Thu 30 Mar 2023 03:32:51 PM UTC: 
 arraylist.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
30b9cc7
Thu 30 Mar 2023 03:34:48 PM UTC: 
 arraylist.c | 4 ++++
 1 file changed, 4 insertions(+)
In file included from test.c:5:
arraylist.c: In function ‘append’:
arraylist.c:24:10: error: invalid type argument of ‘->’ (have ‘int’)
   24 |   l->size->data=data;
      |          ^~
Compilation failed
4a043bc
Thu 30 Mar 2023 03:35:00 PM UTC: 
 arraylist.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
arraylist.c: In function ‘append’:
arraylist.c:24:10: error: assignment to ‘int’ from ‘void *’ makes integer from pointer without a cast [-Werror=int-conversion]
   24 |   l->size=data;
      |          ^
cc1: all warnings being treated as errors
Compilation failed
2a02c25
Thu 30 Mar 2023 03:35:10 PM UTC: 
 arraylist.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
arraylist.c: In function ‘append’:
arraylist.c:24:13: error: dereferencing ‘void *’ pointer [-Werror]
   24 |   l->size = *data;
      |             ^~~~~
arraylist.c:24:11: error: void value not ignored as it ought to be
   24 |   l->size = *data;
      |           ^
cc1: all warnings being treated as errors
Compilation failed
c5ac29a
